syntax = "proto3";

package singhhp1069.go_sass;


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message Table {
    string table_name = 1;
    repeated Column column =2;
}

message Column {
    string name = 1;
    string type = 2;
    optional string primaryKey = 3;
}

message CreateTableRequest  {
    Table table = 1;
}
message  CreateTableResponse {
    Table table =1;
}

service TableService {
    rpc CreateTable(CreateTableRequest) returns (CreateTableResponse) {
        option (google.api.http) = {
            post : "/v1/table",
            body : "*"
          };
    }
}
